--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -84,11 +84,11 @@ Contributor(s): .
                 <artifactId>drombler-commons-fx-docking</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
+            <!--            <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-fx-time</artifactId>
                 <version>${project.version}</version>
-            </dependency>
+            </dependency>-->
         </dependencies>
     </dependencyManagement>
 </project>
