--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -28,6 +28,8 @@ Contributor(s): .
     <name>Drombler Commons - FX - All</name>
     <description>Drombler Commons - FX is a collection of reusable libraries and frameworks for JavaFX.</description>
     <inceptionYear>2013</inceptionYear>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
