--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@ Contributor(s): .
     <name>Drombler Commons - All</name>
     <description>Drombler Commons is a collection of reusable libraries and frameworks.</description>
     <inceptionYear>2012</inceptionYear>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
