--- a/drombler-commons-client/drombler-commons-client-core/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-core/pom.xml
@@ -28,6 +28,8 @@ Contributor(s): .
     <name>Drombler Commons - Client - Core</name>
     <description>Drombler Commons - Client - Core is a collection of utility classes and frameworks for client side development.</description>
     <inceptionYear>2014</inceptionYear>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
