--- a/drombler-commons-client/pom.xml
+++ b/drombler-commons-client/pom.xml
@@ -27,6 +27,8 @@ Contributor(s): .
     <name>Drombler Commons - Client - All</name>
     <description>Drombler Commons - Client is a collection of reusable libraries and frameworks for client side development</description>
     <inceptionYear>2014</inceptionYear>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
