--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
@@ -29,7 +29,8 @@ Contributor(s): .
     <name>Drombler Commons - FX - Samples - Ensemble - Parent</name>
 
     <description>The parent POM of my drombler-commons-fx-samples-ensemble project. This drombler-commons-fx-samples-ensemble Parent POM should be the parent (either directly or indirectly) of every drombler-commons-fx-samples-ensemble project unless there is a good reason to do otherwise (in which case the reason should be documented).</description>
-    <url>http://www.mycompany.com/drombler-commons-fx-ensemble</url>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     <inceptionYear>2012</inceptionYear>
     
     <scm>
@@ -58,6 +59,7 @@ Contributor(s): .
      
     <properties>   
         <!-- Dev Environment Defaults -->
+        <netbeans.hint.jdkPlatform>JDK_1.7</netbeans.hint.jdkPlatform>
         <scm.parent.connection>scm:hg:http://hg.code.sf.net/p/drombler/drombler-commons</scm.parent.connection>
         <scm.parent.developerConnection>scm:hg:ssh://${username}@hg.code.sf.net/p/drombler/drombler-commons</scm.parent.developerConnection>
         <scm.parent.url>http://sourceforge.net/p/drombler/drombler-commons</scm.parent.url>
