--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
@@ -30,6 +30,8 @@ Contributor(s): .
       reason should be documented).
   </description>
   <inceptionYear>2014</inceptionYear>
+  <!-- required for Javadoc (apidocs) linking -->
+  <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
   <scm>
       <connection>${scm.connection}</connection>
