[#36] Make the Docking Framework usable outside Drombler FX - Javadoc - Clean-Up

--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -130,7 +130,7 @@ Contributor(s): .
                                             <report>aggregate</report>
                                         </reports>
                                         <configuration>
-                                            <excludePackageNames>${excludePackageNames}:org.drombler.commons.fx.sample8</excludePackageNames>
+                                            <excludePackageNames>${excludePackageNames}:*.samples.*:*.sample8</excludePackageNames>
                                         </configuration>
                                     </reportSet>
                                 </reportSets>
