--- a/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
@@ -67,7 +67,7 @@ Contributor(s): .
   <modules>
       <module>drombler-commons-fx-samples-parent</module>
       <module>drombler-commons-fx-samples-docking</module>
-      <module>drombler-commons-fx-samples-ensemble</module>
+      <!--<module>drombler-commons-fx-samples-ensemble</module>-->
       <module>drombler-commons-fx-samples-time8</module>
   </modules>
     
