--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/pom.xml
@@ -32,8 +32,8 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     
     <distributionManagement>
         <site>
@@ -59,4 +59,15 @@ Contributor(s): .
         <!--<module>drombler-commons-fx-samples-ensemble-time</module>-->
     </modules>
     
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <skipDeploy>true</skipDeploy>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
