[#39] Make the Context Framework usable outside Drombler FX - Context sample added - skip site deploy

--- a/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
@@ -14,61 +14,74 @@ Copyright 2012 Drombler.org. All Rights Reserved.
 Contributor(s): .
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-      <groupId>org.drombler.commons</groupId>
-      <artifactId>drombler-commons-fx-samples-parent</artifactId>
-      <version>0.3-SNAPSHOT</version>
-      <relativePath>drombler-commons-fx-samples-parent/pom.xml</relativePath>
-  </parent>
-  <artifactId>drombler-commons-fx-samples</artifactId>
-  <packaging>pom</packaging>
-  <name>Drombler Commons - FX - Samples - All</name>
-  <description>Drombler Commons - FX - Samples is a collection of samples showing features of Drombler Commons - FX.</description>
-  <inceptionYear>2014</inceptionYear>
-  <!-- required for Javadoc (apidocs) linking -->
-  <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.drombler.commons</groupId>
+        <artifactId>drombler-commons-fx-samples-parent</artifactId>
+        <version>0.3-SNAPSHOT</version>
+        <relativePath>drombler-commons-fx-samples-parent/pom.xml</relativePath>
+    </parent>
+    <artifactId>drombler-commons-fx-samples</artifactId>
+    <packaging>pom</packaging>
+    <name>Drombler Commons - FX - Samples - All</name>
+    <description>Drombler Commons - FX - Samples is a collection of samples showing features of Drombler Commons - FX.</description>
+    <inceptionYear>2014</inceptionYear>
+    <!-- required for Javadoc (apidocs) linking -->
+    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
-  <scm>
-      <connection>${scm.connection}</connection>
-      <developerConnection>${scm.developerConnection}</developerConnection>
-      <url>${scm.url}</url>
-      <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>${scm.connection}</connection>
+        <developerConnection>${scm.developerConnection}</developerConnection>
+        <url>${scm.url}</url>
+        <tag>HEAD</tag>
+    </scm>
     
-  <distributionManagement>
-      <site>
-          <id>drombler.sourceforge.net</id>
-          <url>${distributionManagement.fx.samples.parent.url}/</url>
-      </site>
-  </distributionManagement>
+    <distributionManagement>
+        <site>
+            <id>drombler.sourceforge.net</id>
+            <url>${distributionManagement.fx.samples.parent.url}/</url>
+        </site>
+    </distributionManagement>
 
-  <licenses>
-      <license>
-          <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
-          <distribution>repo</distribution>
-          <!--<url>http://java.sun.com/spl.html</url>-->
-          <url>../LICENSE.txt</url>
-      </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
+            <distribution>repo</distribution>
+            <!--<url>http://java.sun.com/spl.html</url>-->
+            <url>../LICENSE.txt</url>
+        </license>
+    </licenses>
     
-  <properties>
-      <scm.connection>${scm.parent.connection}</scm.connection>
-      <scm.developerConnection>${scm.parent.developerConnection}</scm.developerConnection>
-      <scm.url>${scm.parent.url}</scm.url>
-  </properties>
+    <properties>
+        <scm.connection>${scm.parent.connection}</scm.connection>
+        <scm.developerConnection>${scm.parent.developerConnection}</scm.developerConnection>
+        <scm.url>${scm.parent.url}</scm.url>
+    </properties>
     
 
-  <!-- Not inherited!?? -->
-  <prerequisites>
-      <maven>${maven.version}</maven>
-  </prerequisites>
+    <!-- Not inherited!?? -->
+    <prerequisites>
+        <maven>${maven.version}</maven>
+    </prerequisites>
 
-  <modules>
-      <module>drombler-commons-fx-samples-parent</module>
-      <module>drombler-commons-fx-samples-docking</module>
-      <module>drombler-commons-fx-samples-ensemble</module>
-      <module>drombler-commons-fx-samples-time8</module>
-  </modules>
+    <modules>
+        <module>drombler-commons-fx-samples-parent</module>
+        <module>drombler-commons-fx-samples-docking</module>
+        <module>drombler-commons-fx-samples-ensemble</module>
+        <module>drombler-commons-fx-samples-time8</module>
+        <module>drombler-commons-fx-samples-context</module>
+    </modules>
+  
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <skipDeploy>true</skipDeploy>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     
 </project>
