--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -108,7 +108,10 @@ Contributor(s): .
                             <plugin>
                                 <groupId>org.apache.maven.plugins</groupId>
                                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                                <version>2.6</version>
+                                <version>2.8-SNAPSHOT</version>
+                                <configuration>
+                                    <project-info.modules.reportCoordinates>true</project-info.modules.reportCoordinates>
+                                </configuration>
                             </plugin>
                             <plugin>
                                 <groupId>org.apache.maven.plugins</groupId>
