--- a/drombler-commons-fx/drombler-commons-fx-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-core/pom.xml
@@ -162,6 +162,10 @@ Contributor(s): .
             <artifactId>softsmithy-lib-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
