--- a/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
@@ -18,7 +18,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.3-SNAPSHOT</version>
+        <version>0.3</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-parent</artifactId>
@@ -37,7 +37,7 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-      <tag>HEAD</tag>
+      <tag>drombler-commons-0.3</tag>
   </scm>
     
     <distributionManagement>
