--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
@@ -23,7 +23,7 @@ Contributor(s): .
     </parent>
     <groupId>org.drombler.commons</groupId>
     <artifactId>drombler-commons-fx-samples-ensemble-parent</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
     <packaging>pom</packaging>
  
     <name>Drombler Commons - FX - Samples - Ensemble - Parent</name>
@@ -37,7 +37,7 @@ Contributor(s): .
         <connection>${scm.parent.connection}</connection>
         <developerConnection>${scm.parent.developerConnection}</developerConnection>
         <url>${scm.parent.url}</url>
-      <tag>HEAD</tag>
+      <tag>drombler-commons-0.3</tag>
   </scm>
     
     <licenses>
