--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler</groupId>
         <artifactId>drombler-oss-parent</artifactId>
-        <version>1.1</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath />
     </parent>
     <groupId>org.drombler.commons</groupId>
@@ -63,10 +63,9 @@ Contributor(s): .
         <scm.parent.url>http://sourceforge.net/p/drombler/drombler-commons</scm.parent.url>
         <distributionManagement.parent.url>scp://${username}@shell.sourceforge.net/home/project-web/drombler/htdocs/DromblerCommons/${project.version}/docs/site</distributionManagement.parent.url>
         <!--<url.parent>http://www.drombler.org/DromblerCommons/${project.version}/docs/site/</url.parent>-->
-        <java.min.version>1.8</java.min.version>
-
+        
         <!-- Dependency Versions -->
-        <dependency.slf4j.version>1.7.6</dependency.slf4j.version>
+        
     </properties>
      
     <!-- Not inherited!?? -->
@@ -173,20 +172,4 @@ Contributor(s): .
             </plugins>
         </pluginManagement>
     </build>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <!-- TODO: Move to Drombler OSS - Parent or SoftSmithy Parent -->
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${dependency.slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <!-- TODO: Move to Drombler OSS - Parent or SoftSmithy Parent -->
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-jdk14</artifactId>
-                <version>${dependency.slf4j.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 </project>
