[#35] Upgrade to JavaFX 8  - Package renamed  - nbactions.xml fixed

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-time8/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-time8/pom.xml
@@ -137,7 +137,7 @@ Contributor(s): .
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.drombler.commons.fx.sample8.DateTimeSampleApplication</mainClass>
+                            <mainClass>org.drombler.commons.fx.samples.time.DateTimeSampleApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
