--- a/drombler-commons-action/drombler-commons-action-fx/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx/pom.xml
@@ -73,5 +73,10 @@ Contributor(s): .
             <artifactId>drombler-commons-fx-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-action-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
