--- a/drombler-commons-action/pom.xml
+++ b/drombler-commons-action/pom.xml
@@ -26,8 +26,8 @@ Contributor(s): .
     <packaging>pom</packaging>
 
     <name>Drombler Commons - Action - All</name>
-    <description>Drombler Commons - Action is an Action framework for clients and provides mechanisms to synchronize the
-        state of toolbarbuttons and menu items.</description>
+    <description>An Action Framework, which keeps the state (enabled/ disabled, selected/ unselected etc.), 
+        the information (texts, image etc.) and the logic between menu items and toolbar buttons in sync.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
     <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
