--- a/drombler-commons-action/drombler-commons-action-core/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-core/pom.xml
@@ -26,9 +26,8 @@ Contributor(s): .
     <packaging>bundle</packaging>
 
     <name>Drombler Commons - Action - Core</name>
-    <description>Drombler Commons is a collection of reusable libraries and frameworks. You can use this POM file e.g. 
-        in your dependencyManagement section to manage your Drombler Commons dependencies.</description>
-        <inceptionYear>2014</inceptionYear>
+    <description>The core classes of the Action Framework.</description>
+    <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
     <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
     
