[#52] FXML Convention: Provide a location default
- Sample

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/ImageSamplePane.properties
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/ImageSamplePane.properties
@@ -1,1 +1,6 @@
-label.text=5 image samples using absolute URLs and URLs relative to the package of the controller:
+label.header.text=5 image samples using absolute URLs and URLs relative to the package of the controller:
+label.1.text=@one24.png (relative URL):
+label.2.text=@image/two24.png (relative URL):
+label.3.text=@../three24.png (relative URL):
+label.4.text=@/four24.png (absolute URL):
+label.5.text=@/image/five24.png (absolute URL):
