--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
@@ -74,7 +74,6 @@ Contributor(s): .
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>2.0</version>
                 <executions>
                     <execution>
                         <id>jar</id>
@@ -82,7 +81,7 @@ Contributor(s): .
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.drombler.commons.fx.samples.docking.DockingSampleApplication</mainClass>
+                            <mainClass>org.drombler.commons.fx.samples.fxml.FXMLSampleApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
