--- a/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
@@ -71,7 +71,8 @@ Contributor(s): .
       <!--<module>drombler-commons-fx-samples-ensemble</module>-->
         <module>drombler-commons-fx-samples-time</module>
         <module>drombler-commons-fx-samples-context</module>
-    </modules>
+        <module>drombler-commons-fx-samples-action</module>
+  </modules>
   
     <build>
         <plugins>
