[#44] Make the Docking Framework more lightweight: Remove Dockable and DockablePane from the API - Fix

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ Contributor(s): .
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
         <version>0.5-SNAPSHOT</version>
-        <relativePath>../drombler-commons-parent/pom.xml</relativePath>
+        <relativePath>drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons</artifactId>
     <packaging>pom</packaging>
