[maven-release-plugin] prepare release drombler-commons-0.5

--- a/drombler-commons-client/drombler-commons-client-parent/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-parent/pom.xml
@@ -18,7 +18,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>0.5</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-client-parent</artifactId>
@@ -37,7 +37,7 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-        <tag>HEAD</tag>
+        <tag>drombler-commons-0.5</tag>
     </scm>
     
     <distributionManagement>
