--- a/drombler-commons-context/pom.xml
+++ b/drombler-commons-context/pom.xml
@@ -72,6 +72,10 @@ Contributor(s): .
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
