--- a/drombler-commons-iso/pom.xml
+++ b/drombler-commons-iso/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.6</version>
+        <version>0.7-SNAPSHOT</version>
         <relativePath>../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-iso</artifactId>
@@ -35,7 +35,7 @@ Contributor(s): .
         <connection>${scm.connection}</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>${scm.url}</url>
-        <tag>drombler-commons-0.6</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <distributionManagement>
