--- a/drombler-commons-logging-slf4j-cdi/pom.xml
+++ b/drombler-commons-logging-slf4j-cdi/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.7-SNAPSHOT</version>
         <relativePath>../drombler-commons-parent/pom.xml</relativePath>
     </parent>
 
@@ -49,6 +49,13 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Require-Capability>
+                            osgi.extender; filter:="(osgi.extender=pax.cdi)"
+                        </Require-Capability>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -62,6 +69,14 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.cdi</groupId>
+            <artifactId>pax-cdi-api</artifactId>
+            <version>0.11.0</version>
+            <!-- This dependency is only required in OSGi environments. -->
+            <scope>provided</scope>
+            <optional>true</optional>    
         </dependency>
         <dependency>
             <groupId>junit</groupId>
