[#37] Provide CDI integration - Fixes

--- a/drombler-commons-logging-slf4j-cdi/pom.xml
+++ b/drombler-commons-logging-slf4j-cdi/pom.xml
@@ -52,7 +52,8 @@
                 <configuration>
                     <instructions>
                         <Require-Capability>
-                            osgi.extender; filter:="(osgi.extender=pax.cdi)"
+                            osgi.extender; filter:="(osgi.extender=pax.cdi)", 
+                            org.ops4j.pax.cdi.extension; filter:="(extension=pax-cdi-extension)"
                         </Require-Capability>
                     </instructions>
                 </configuration>
@@ -73,7 +74,6 @@
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
             <artifactId>pax-cdi-api</artifactId>
-            <version>0.11.0</version>
             <!-- This dependency is only required in OSGi environments. -->
             <scope>provided</scope>
             <optional>true</optional>    
